--- a/secondreactappfromtutorial/react-tutorial/package.json
+++ b/secondreactappfromtutorial/react-tutorial/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contact-app",
+  "name": "react-tutorial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,16 +9,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "util": "^0.12.5",
-    "uuidv4": "^6.2.13",
-    "uuidv5": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +35,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "homepage": "https://mintumintu.github.io/react-tutorial"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
